--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "spatie/laravel-cookie-consent": "^3.2",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
